[tool.poetry]
name = "postamoo"
version = "0.1.1"
description = "A service for posting and replying to multimedia content."
license = "Apache License 2.0"
authors = ["Artin Mohammadi <sheikhartin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sheikhartin/postamoo"
keywords = ["posting", "replying", "microservice"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic = "^2.9.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ruff = "^0.6.1"
pytest = "^8.3.2"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
